--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,6 +3,15 @@
   margin-top: 3em;
   margin-bottom: 8em;
 }
+.aboutPage {
+  /* align-items: flex-start; */
+  max-width: 1100px;
+  margin: 5em auto 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
+  grid-gap: 2em;
+  height: 60vh;
+}
 
 .about__name {
   color: var(--clr-primary);
@@ -16,7 +25,7 @@
 
 .about__desc {
   font-size: 1rem;
-  max-width: 600px;
+  white-space: pre-wrap; /* css-3 */
 }
 
 .about__desc,
