--- a/src/pages/allProjectPage.css
+++ b/src/pages/allProjectPage.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 .projects-img {
@@ -27,7 +29,19 @@
   flex-direction: column;
   align-items: center;
 }
-
+.website-link {
+  color: rgb(108, 151, 253);
+}
+.web-link-container {
+  display: flex;
+  gap: 0.5em;
+}
+.text {
+  font-size: 1.3em;
+}
+.text-span {
+  color: var(--clr-primary);
+}
 @media (max-width: 1120px) {
   .projects-img {
     width: 55em;
